pierwsze style i nierozwiązany problem z localhostem

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,37 @@
     <link rel="stylesheet" href="./css/main.scss">
     <title>SCSS Project</title>
 </head>
+
 <body>
-    
+    <main>
+        <article class="card">
+            <div class="card_content">
+                <h1>OscarWallshack</h1>
+                <img class="card_image" src="./images/anonymous.png" alt="Profile photo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eveniet doloremque placeat
+                    eligendi. Quas neque, aliquid excepturi, harum quam accusamus fugit quo aperiam rerum, quisquam
+                    necessitatibus esse dolor sint sed.</p>
+            </div>
+            <div class="card_buttons">
+                <button class="card_button">
+                    <a href="" class="card_button_link">GitHub</a>
+                </button>
+                <button class="card_button--secondary">
+                    <a href="" class="card_button_link">LinkedIn</a>
+                </button>
+            </div>
+        </article>
+    </main>
+    <footer>
+        <p>Bartosz Walczak</p>
+        <p>Future Junior Frontend Developer</p>
+        <button class="primary-button">
+            <span class="primary-button_text">
+                Contact me!
+            </span>
+        </button>
+
+    </footer>
 </body>
+
 </html>
