--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,38 @@
 <body>
     <main>
         <article class="card">
-            <div class="card_content">
-                <h1>OscarWallshack</h1>
-                <img class="card_image" src="./images/anonymous.png" alt="Profile photo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eveniet doloremque placeat
-                    eligendi. Quas neque, aliquid excepturi, harum quam accusamus fugit quo aperiam rerum, quisquam
-                    necessitatibus esse dolor sint sed.</p>
+            <div class="header">
+                <img class="logo" src="./images/logo.png" alt="">
+                <div class="perks">
+                    <img src="./images/perks/1.png" alt="" class="perk">
+                    <img src="./images/perks/2.png" alt="" class="perk">
+                    <img src="./images/perks/3.png" alt="" class="perk">
+                    <img src="./images/perks/4.png" alt="" class="perk">
+                    <img src="./images/perks/5.png" alt="" class="perk">
+                </div>
             </div>
-            <div class="card_buttons">
-                <button class="card_button">
-                    <a href="" class="card_button_link">GitHub</a>
-                </button>
-                <button class="card_button--secondary">
-                    <a href="" class="card_button_link">LinkedIn</a>
-                </button>
+            <div class="card_body">
+                <div class="content">
+                    <h1 class="content_headline">Punk</h1>
+                    <p class="content_quote">"He Burned Down Half The City Just To Prove He Was Right And Burned The
+                        Other Half Just For Fun."</p>
+                    <!-- <img src="./images/cyberpunk.jpg" alt="" class="content_cyberpunk_art"> -->
+                </div>
+                <div class="buttons">
+                    <h2>Ready to enter the game?</h2>
+                    <button class="button">
+                        <a href="" class="button_link">Let's rock!</a>
+                    </button>
+                    <button class="button--secondary">
+                        <a href="" class="button_link">Need a moment</a>
+                    </button>
+                </div>
             </div>
+            <div class="cyberpunk_art"></div>
+
         </article>
     </main>
-    <footer>
+    <!-- <footer>
         <p>Bartosz Walczak</p>
         <p>Future Junior Frontend Developer</p>
         <button class="primary-button">
@@ -38,7 +52,7 @@
             </span>
         </button>
 
-    </footer>
+    </footer> -->
 </body>
 
 </html>
