--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>SCSS Project</title>
 </head>
 
@@ -41,20 +44,9 @@
                     </div>
                 </div>
             </div>
-            <div class="cyberpunk_art"></div>
 
         </article>
     </main>
-    <!-- <footer>
-        <p>Bartosz Walczak</p>
-        <p>Future Junior Frontend Developer</p>
-        <button class="primary-button">
-            <span class="primary-button_text">
-                Contact me!
-            </span>
-        </button>
-
-    </footer> -->
 </body>
 
 </html>
